--- a/src/popup.html
+++ b/src/popup.html
@@ -1,7 +1,7 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
+    <meta charset="UTF-8">
     <style>
         body {
             width: 400px;
